fix spacing issues on navbar

--- a/brutal.css
+++ b/brutal.css
@@ -56,7 +56,7 @@ p {
 }
 .navbar {
   width: 100vw;
-  height: 10vh;
+  height: 11vh;
   background-color: white;
   border-radius: 15px;
   border-top: 3px solid;
